# django_final

./: .env.sample  .flake8  pyproject.toml
config/: settings.py  urls.py
mailings/: forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: __init__.py  send_message.py
mailings/migrations/: 0001_initial.py  0002_mailingattempt.py  0003_alter_mailing_options_mailing_owner.py  0004_alter_mailing_end_dispatch_and_more.py
mailings/templates/: add_mailing.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  mailing_statistic.html
message/: forms.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_message_owner.py
message/templates/: add_message.html  base.html  message_confirm_delete.html  message_detail.html  message_list.html
recipient/: forms.py  models.py  urls.py  views.py
recipient/migrations/: 0001_initial.py  0002_alter_recipient_options_recipient_owner.py
recipient/templates/: add_recipient.html  recipient_confirm_delete.html  recipient_detail.html  recipient_list.html
recipient/templates/includes/: inc_menu.html
recipient/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_manager_group.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html
users/templates/users/: user_form.html  user_list.html
